# temp-repo

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/temp_repo/: cli.py
tests/: test_dummy.py
